FIX   -Password visibility icons   -Left side of form   -Form as component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,12 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 
 input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
